Fixed error on passthroughlogin

--- a/activitystreamer/register.conf
+++ b/activitystreamer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Activity Streamer
 MODULE_DESCRIPTION: Provides a log of activities performed by users on the site. Supports PubSubHubbub and activitystrea.ms
 MODULE_AUTHORS: Wesley Nitsckie, Paul Mungai
 MODULE_RELEASEDATE: 2008 08 25
-MODULE_VERSION: 0.040
+MODULE_VERSION: 0.041
 MODULE_PATH: activitystreamer
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,6 +18,7 @@ DEPENDS_CONTEXT: 0
 DEPENDS: feed
 DEPENDS: pubsubhubbub
 
+UPDATE_DESCRIPTION: [kdc] Fixed error on passthroughlogin
 UPDATE_DESCRIPTION: Changed module status to beta
 UPDATE_DESCRIPTION: Now using ext instead of htmlelements for the extjs resources
 
