--- a/slate/register.conf
+++ b/slate/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Clean slate
 MODULE_DESCRIPTION: Provides a clean slate on which you can add block. There is a default slate, and any number of slate pages can be added to create flexible interfaces to a Chisimba installation.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 25, 2012, 3:29 pm
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.007
 MODULE_PATH: slate
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -17,8 +17,14 @@ TABLE: tbl_slate_pages
 
 MENU_CATEGORY: admin
 PAGE: admin_site
+PAGE: admin_site|manage|manageslates|mod_slate_manage
 
 WIDEBLOCK: slatepages
 
+TEXT: mod_slate_manage|Manage slates|Manage slates
 TEXT: mod_slate_heading_edit|Edit an existing slate|Edit an existing slate
 TEXT: mod_slate_heading_new|Add a new slate|Add a new slate
+TEXT: mod_slate_status_success|Your slate was saved|Your slate was saved
+TEXT: mod_slate_about|Text for a left panel text block with some help information about slate|The 'Clean Slate' module provides an empty user interface to which an administrator can add content using blocks from this and other modules. An infinite number of clean slates can be added by using this interface, but in reality, it is probably not very useful to have more than around 10 slates. If you need more than that, you may well need a content tool, rather than clean slate. Click the pencil to edit an existing slate, the trashbin to delete one, and the add icon to add a new slate.
+TEXT: mod_slate_abouttitle|Title for about block|About clean slate
+TEXT: mod_slate_allslates|All slates|All slates
