--- a/slate/register.conf
+++ b/slate/register.conf
@@ -25,6 +25,7 @@ TEXT: mod_slate_manage|Manage slates|Manage slates
 TEXT: mod_slate_heading_edit|Edit an existing slate|Edit an existing slate
 TEXT: mod_slate_heading_new|Add a new slate|Add a new slate
 TEXT: mod_slate_status_success|Your slate was saved|Your slate was saved
+TEXT: mod_slate_status_fail|Your slate failed to save|Your slate failed to save
 TEXT: mod_slate_about|Text for a left panel text block with some help information about slate|The 'Clean Slate' module provides an empty user interface to which an administrator can add content using blocks from this and other modules. An infinite number of clean slates can be added by using this interface, but in reality, it is probably not very useful to have more than around 10 slates. If you need more than that, you may well need a content tool, rather than clean slate. Click the pencil to edit an existing slate, the trashbin to delete one, and the add icon to add a new slate.
 TEXT: mod_slate_abouttitle|Title for about block|About clean slate
 TEXT: mod_slate_allslates|All slates|All slates
