--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.531
+MODULE_VERSION: 1.532
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MODULE_STATUS: stable
 
 MENU_CATEGORY: user
 
+UPDATE_DESCRIPTION: [kdc] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [dwk] Tested and marked it stable, added a few style elements
 UPDATE_DESCRIPTION: Added wrapper div and classes to the links that appear under the calendar wideblock
 UPDATE_DESCRIPTION: Added support for groups from unesco_oer
@@ -24,6 +25,8 @@ SIDEMENU: user-1|site
 SIDEMENU: elearnpostlogin-1
 
 DEPENDS: calendarbase
+DEPENDS: jquerycore
+
 COMMENT: USE_CONTEXT_GROUPS: Lecturers
 
 COMMENT: CONDITION: isadmin|isAdmin
