saving whethere note is public or not

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: mynotes
-MODULE_NAME: My notes
+MODULE_NAME: My Notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.015
+MODULE_VERSION: 0.016
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -40,6 +40,7 @@ TEXT: mod_mynotes_validateaddednote|Validate an added note|Validate Added Note
 TEXT: mod_mynotes_validateeditednote|Validate an edited note|Validate Edited Note
 TEXT: mod_mynotes_confirm|The Word Confirm|Confirm
 TEXT: mod_mynotes_tags|The Word Tags|My Tags
+TEXT: mod_mynotes_notepublic|The Word Public|Public
 TEXT: mod_mynotes_searchresults|The words Search Results|Search Results
 TEXT: mod_mynotes_readmore|The words Read More|Read More
 TEXT: mod_mynotes_viewnote|The words View All Notes|View All Notes
