fixed loophole where non-student can upload assignments

--- a/assignment/register.conf
+++ b/assignment/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Assignments
 MODULE_DESCRIPTION: Assignments enable students to view a list of booked assignments. The status is displayed indicating whether it is open, closed or if the student has submitted. The mark is shown once it has been marked.A new assignment can be opened for answering. Students can complete the assignment if its online and submit it. An uploadable or offline assignment can be completed and then loaded into the database. A marked assignment can be opened and the lecturer's comment can be viewed.
 MODULE_AUTHORS: Megan Watson, yasser buchana, Jameel Adam, Paul Mungai, Jeremy OConnor
 MODULE_RELEASEDATE: 2005 01 14
-MODULE_VERSION: 0.613
+MODULE_VERSION: 0.614
 MODULE_PATH: assignment
 MODULE_LANGTERMS: assignment
 MODULE_ISADMIN: 0
@@ -21,6 +21,7 @@ DEPENDS: groupadmin
 DEPENDS: context
 DEPENDS: dhtmlgoodies
 
+UPDATE_DESCRIPTION: [jsc] Added check to prevent non-student uploading
 UPDATE_DESCRIPTION: [dwk] Added styles for improved rendering on different skins
 UPDATE_DESCRIPTION: [pwando] - Refactoring assignment wrt gradebook offline assignment uploads
 UPDATE_DESCRIPTION: Modification to functionality for downloading of all assignments as a ZIP file
@@ -149,6 +150,7 @@ TEXT: mod_assignment_typeorslider|Type in Mark or Use the Slider below|Type in m
 TEXT: mod_assignment_isreflection|The phrase Is it a Reflection|Is it a reflection?
 TEXT: mod_assignment_viewscoremark|Click to view results|Click to view results
 TEXT: mod_assignment_willnotdisplay|Will be diplayed after closing date|Will be diplayed after closing date
+TEXT: mod_assignment_notstudent|Not a student|Not a student in this course
 
 TEXT: mod_assignment_cannotchangefield||You cannot change this field as one or more students have already submitted their work.
 TEXT: mod_assignment_submittedassignmentslist||Submitted assignments list
