Fixed bug when no grades exist

--- a/contextwizard/register.conf
+++ b/contextwizard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] wizard
 MODULE_DESCRIPTION: This is to provide a wizard type interface to direct users to the appropriate location within a [-organisation-] type site
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: April 15, 2012, 8:32 pm
-MODULE_VERSION: 0.004
+MODULE_VERSION: 0.005
 MODULE_PATH: contextwizard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: contextwizard
 MODULE_CATEGORY: [-organisations-]
 
+UPDATE_DESCRIPTION: [KDC] Fixed bug when no grades exist
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 
 DEPENDS: grades
