Forget what I did.. sorry

--- a/activitystreamer/register.conf
+++ b/activitystreamer/register.conf
@@ -35,6 +35,7 @@ BLOCK: popuphandler
 BLOCK: browsecourseactivitiesbutton
 WIDEBLOCK: browsecourseactivities
 
+TEXT: mod_activitystreamer_latestactivityctx|All [-CONTEXT-] activity|All [-CONTEXT-] activity
 TEXT: mod_activitystreamer_latestactivity|Latest Course Activities|Latest Course Activities
 TEXT: mod_activitystreamer_latestactivityside|Latest Course Activities|Latest Course Updates
 TEXT: mod_activitystreamer_activitystreamer|Course Activities|Activity Streamer
