sharing to all contexts [wip]

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My Notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.016
+MODULE_VERSION: 0.017
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -47,3 +47,4 @@ TEXT: mod_mynotes_viewnote|The words View All Notes|View All Notes
 TEXT: mod_mynotes_prev|The word previous|Previous
 TEXT: mod_mynotes_next|The word next|Next
 TEXT: mod_mynotes_nonotes|No notes|There are no notes saved.
+TEXT: word_share|The word Share|Share
