--- a/digitallibrary/register.conf
+++ b/digitallibrary/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: digitallibrary
 MODULE_DESCRIPTION:This provides functionality for digital archives
 MODULE_AUTHORS:David Wafula
 MODULE_RELEASEDATE: 2012 04 15
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.005
 MODULE_PATH: digitallibrary
 MODULE_STATUS: alpha
 
@@ -18,3 +18,5 @@ TEXT: mod_digitallibrary_latestfiles|Phrase latest files|Latest files
 TEXT: mod_digitallibrary_name|Word Name|Name
 TEXT: mod_digitallibrary_date|Word Date|Date
 TEXT: mod_digitallibrary_author|Word Author|Author
+TEXT: mod_digitallibrary_createfolder|Phrase Create Folder|Create Folder
+TEXT: mod_digitallibrary_by|Word by|By
