--- a/statusbar/register.conf
+++ b/statusbar/register.conf
@@ -13,32 +13,49 @@ MODULE_CATEGORY: All
 
 DEPENDS: jquerycore
 
-TABLE: tbl_statusbar_configs
 TABLE: tbl_statusbar_settings
 
 MENU_CATEGORY: Admin
 PAGE: admin_site||Status bar
 
+USES; word_save|The word save|Save
+USES: word_cancel|The word cancel|Cancel
+USES: word_to|The word to|To
+USES: word_message|The word message|Message
+USES: word_send|The word send|
+USES: word_success|The word success|Success
+USES: word_from|The word from |From
+
+TEXT: mod_statusbar_instantmessage|Instant message|Instant message
+TEXT: mod_statusbar_selectrecipient|Select recipient...|Select recipient...
+TEXT: mod_statusbar_sendmessage|Send message|Send message
+TEXT: mod_statusbar_confirmsend|Your message has been sent|Your message has been sent
 TEXT: mod_statusbar_settings|The word settings|Settings
 TEXT: mod_statusbar_orientation|The word orientation|Orientation
 TEXT: mod_statusbar_horizontal|The word horizontal|Horizontal
 TEXT: mod_statusbar_vertical|The word vertical|Vertical
 TEXT: mod_statusbar_position|The word position|Position
-TEXT: mod_statusbar_lefttop|Left/Top|Left/Top
+TEXT: mod_statusbar_showbar|Show bar|Show bar
+TEXT: mod_statusbar_hidebar|Hide bar|Hide bar
+TEXT: mod_statusbar_lefttop|Left top|Left top
 TEXT: mod_statusbar_top|Top|Top
-TEXT: mod_statusbar_righttop|Right/Top|Right/Top
+TEXT: mod_statusbar_righttop|Right top|Right top
 TEXT: mod_statusbar_right|Right|Right
-TEXT: mod_statusbar_rightbottom|Right/Bottom|Right/Bottom
+TEXT: mod_statusbar_rightbottom|Right bottom|Right bottom
 TEXT: mod_statusbar_bottom|Bottom|Bottom
-TEXT: mod_statusbar_leftbottom|Left/Bottom|Left/Bottom
+TEXT: mod_statusbar_leftbottom|Left bottom|Left bottom
 TEXT: mod_statusbar_left|Left|Left
-TEXT: mod_statusbar_appearance|The word appearance|Appearance
 TEXT: mod_statusbar_statusbar|Status bar|Status bar
 TEXT: mod_statusbar_changesettings|Change settings|Change settings
 TEXT: mod_statusbar_changeposition|Change position|Change position
 TEXT: mod_statusbar_changeorientation|Change orientation|Change orientation
 TEXT: mod_statusbar_changeappearance|Change appearance|Change appearance
 TEXT: mod_statusbar_onlineusers|Online users|Online users
+TEXT: mod_statusbar_email|Email|Email
+TEXT: mod_statusbar_alarm|Calendar alarm|Calendar alarm
+TEXT: mod_statusbar_document|New [-context-] content|New [-context-] content
+TEXT: mod_statusbar_picture|New pictures|New pictures
+TEXT: mod_statusbar_buddies|Buddies|Buddies
 TEXT: mod_statusbar_messaging|Messaging|Messaging
 TEXT: mod_statusbar_bookmarkpage|Bookmark page|Bookmark page
 TEXT: mod_statusbar_gotobookmarks|Go to bookmarks|Go to bookmarks
