Added new method for statusbar

--- a/buddies/register.conf
+++ b/buddies/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Buddies
 MODULE_DESCRIPTION: Manages the user's buddies. Allows the user to make other users buddies which they can then send email, instant messages e.t.c. to.
 MODULE_AUTHORS: Jeremy O'Connor, Jameel Sauls
 MODULE_RELEASEDATE: 2005 02 01
-MODULE_VERSION: 1.24
+MODULE_VERSION: 1.25
 MODULE_PATH: buddies
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_STATUS: pre-alpha
 MENU_CATEGORY: user
 SIDEMENU: user-2
 
+UPDATE_DESCRIPTION: [kdc] Added new method for statusbar
 UPDATE_DESCRIPTION: [kdc] Fixed language error
 
 DEPENDS: userparamsadmin
