Renamed class file to avoid conflict with internal mail - Added fixed width for dialogs for IE9 - fixed IE9 bug in JS

--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: bookmarks
 MODULE_DESCRIPTION: Manage bookmarking within the system
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 28, 2012, 12:34 pm
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.006
 MODULE_PATH: bookmarks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bookmarks
 MODULE_CATEGORY: bookmarks
 
+UPDATE_DESCRIPTION: [KDC] Renamed class file to avoid conflict with internal mail - Added fixed width for dialogs for IE9 - fixed IE9 bug in JS
 UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [KDC] Fixed menu positioning
