Added fixed width for dialogs for IE9

--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.532
+MODULE_VERSION: 1.533
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MODULE_STATUS: stable
 
 MENU_CATEGORY: user
 
+UPDATE_DESCRIPTION: [kdc] Added fixed width for dialogs for IE9
 UPDATE_DESCRIPTION: [kdc] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [dwk] Tested and marked it stable, added a few style elements
 UPDATE_DESCRIPTION: Added wrapper div and classes to the links that appear under the calendar wideblock
