Added new field for alarms in statsusbar

--- a/calendarbase/register.conf
+++ b/calendarbase/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar Base Module
 MODULE_DESCRIPTION: This module holds the core classes and functionality for calendar and event management that allows it to be shared between user, context and workgroup. It also holds some classes for generating calendars. It is not a module that is directly accessible by users, though some modules depended on it. There are plans to deprecate it in favour of the eventscalendar module.
 MODULE_AUTHORS: Tohir Solomons modification by David wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.109
+MODULE_VERSION: 1.110
 MODULE_PATH: calendarbase
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,6 +19,7 @@ TABLE: tbl_calendar
 TABLE: tbl_calendar_event_attachment
 TABLE: tbl_calendar_temp_attachment
 
+UPDATE_DESCRIPTION: [KDC] Added new field for alarms in statsusbar
 UPDATE_DESCRIPTION: [dwk] Tested and marked it stable, added a few style elements
 
 
