--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,14 +3,16 @@ MODULE_NAME: My Notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.017
+MODULE_VERSION: 0.018
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
+MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Added module status
 UPDATE_DESCRIPTION: Added language elements [nguni]
 UPDATE DESCRIPTION: Added search results language elements [nguni]
 UPDATE_DESCRIPTION: Added tags table [nguni]
