Fixed bug when no strands exist

--- a/grades/register.conf
+++ b/grades/register.conf
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: grades
 MODULE_CATEGORY: [-organisations-]
 
+UPDATE_DESCRIPTION: [KDC] Fixed bug with no strands
 UPDATE_DESCRIPTION: [KDC] Removed debud statement
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [KDC] Added strandsÜ
