Added method for statusbar alerts

--- a/internalmail/register.conf
+++ b/internalmail/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Internal email
 MODULE_DESCRIPTION: Email is a fully-featured internal email client that was built for the Chisimba framework. It has features such as addressbooks, mail filtering and sorting, and inline attachments.
 MODULE_AUTHORS: Kevin Cyster bugs fixed by Qhamani Fenama
 MODULE_RELEASEDATE: 2006 12 01
-MODULE_VERSION: 1.043
+MODULE_VERSION: 1.044
 MODULE_PATH: internalmail
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -17,6 +17,7 @@ SIDEMENU: user-2
 
 CONFIG: ATTACHMENT_MAX_SIZE|2M|mod_internalmail_paramdesc
 
+UPDATE_DESCRIPTION: Added method for statusbar alerts
 UPDATE_DESCRIPTION: Changed loading of scriptaculous to the prototype module
 UPDATE_DESCRIPTION: Added explicit load for scriptaculous
 UPDATE_DESCRIPTION: Changed font class=error to span class=unreadmail
