--- a/digitallibrary/register.conf
+++ b/digitallibrary/register.conf
@@ -3,14 +3,19 @@ MODULE_NAME: digitallibrary
 MODULE_DESCRIPTION:This provides functionality for digital archives
 MODULE_AUTHORS:David Wafula
 MODULE_RELEASEDATE: 2012 04 15
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.006
 MODULE_PATH: digitallibrary
 MODULE_STATUS: alpha
 
 MENU_CATEGORY: user
+SIDEMENU: postlogin-1|site
+SIDEMENU: user-2
+SIDEMENU: elearnpostlogin-2
+CONTEXT_AWARE: 1
+
 DEPENDS: filemanager
 
-
+UPDATE_DESCRIPTION: [DWK] Added it to some menus
 TEXT: mod_digitallibrary_title|Phrase Digital Library|Digital Library
 TEXT: mod_digitallibrary_search|Word Search|Search
 TEXT: mod_digitallibrary_tagcloud|Word Tags|Tags
