--- a/digitallibrary/register.conf
+++ b/digitallibrary/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: digitallibrary
 MODULE_DESCRIPTION:This provides functionality for digital archives
 MODULE_AUTHORS:David Wafula
 MODULE_RELEASEDATE: 2012 04 15
-MODULE_VERSION: 0.006
+MODULE_VERSION: 0.008
 MODULE_PATH: digitallibrary
 MODULE_STATUS: alpha
 
@@ -15,12 +15,14 @@ CONTEXT_AWARE: 1
 
 DEPENDS: filemanager
 
+UPDATE_DESCRIPTION: [DWK] You can't use mod_modulecode_name as a text string
 UPDATE_DESCRIPTION: [DWK] Added it to some menus
 TEXT: mod_digitallibrary_title|Phrase Digital Library|Digital Library
 TEXT: mod_digitallibrary_search|Word Search|Search
 TEXT: mod_digitallibrary_tagcloud|Word Tags|Tags
 TEXT: mod_digitallibrary_latestfiles|Phrase latest files|Latest files
-TEXT: mod_digitallibrary_name|Word Name|Name
+TEXT: mod_digitallibrary_name|Digital library|Digital library
+TEXT: mod_digitallibrary_wordname|The word name|name
 TEXT: mod_digitallibrary_date|Word Date|Date
 TEXT: mod_digitallibrary_author|Word Author|Author
 TEXT: mod_digitallibrary_createfolder|Phrase Create Folder|Create Folder
