--- a/digitallibrary/register.conf
+++ b/digitallibrary/register.conf
@@ -3,15 +3,14 @@ MODULE_NAME: digitallibrary
 MODULE_DESCRIPTION:This provides functionality for digital archives
 MODULE_AUTHORS:David Wafula
 MODULE_RELEASEDATE: 2012 04 15
-MODULE_VERSION: 0.008
+MODULE_VERSION: 0.009
 MODULE_PATH: digitallibrary
 MODULE_STATUS: alpha
 
 MENU_CATEGORY: user
 SIDEMENU: postlogin-1|site
 SIDEMENU: user-2
-SIDEMENU: elearnpostlogin-2
-CONTEXT_AWARE: 1
+ISCONTEXTPLUGIN: 1
 
 DEPENDS: filemanager
 
