--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.533
+MODULE_VERSION: 1.534
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MODULE_STATUS: stable
 
 MENU_CATEGORY: user
 
+UPDATE_DESCRIPTION: [kdc] Fixed text elements - Added time to multi day events
 UPDATE_DESCRIPTION: [kdc] Added fixed width for dialogs for IE9
 UPDATE_DESCRIPTION: [kdc] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [dwk] Tested and marked it stable, added a few style elements
@@ -69,11 +70,9 @@ TEXT: mod_calendarbase_time|Time|Time
 TEXT: help_calendar_title_delete|Help Title Text|Deleting an Event
 TEXT: help_calendar_overview_delete|Help Title Text|Next to each event, there are edit and delete icons.To delete an event, simply click on the delete event. This will prompt you for a confirmation To delete a multiday event, you can click on the delete icon for any day of the event.
 TEXT: help_calendar_process_delete|Help Title Text|Next to each event, there are edit and delete icons. To delete an event, simply click on the delete event. This will prompt you for a confirmation To delete a multiday event, you can click on the delete icon for any day of the event.
-TEXT: mod_calendarbase_relatedwebsite|RelatedWebsite|Related Website
 TEXT: mod_calendar_relatedwebsite|RelatedWebsite|Related Website
 TEXT: mod_calendar_fileupload|uploadFile | Upload File
 TEXT: mod_calendar_sidecal|Side calendar|Side calendar
-USES: mod_calendarbase_isthisamultidayevent|Is this a multiday event?|Is this a multiday event?
 
 TEXT: mod_calendar_eventsfound|Events found: [-number-]|Events found: [-number-]
 TEXT: mod_calendar_event|Event for: [-date-]|Event for: [-date-]
