--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -14,6 +14,7 @@ DEPENDS: filemanager
 ISCONTEXTPLUGIN: 1
 TAGS: context|elearning
 
+UPDATE_DESCRIPTION" [kdc] Enabled activity streamer
 UPDATE_DESCRIPTION: [dwk] Added ability to have a 1, 2 or 3 column layout for [-CONTEXT-] content
 UPDATE_DESCRIPTION: Added styles to enable better skinning
 UPDATE_DESCRIPTION: Bug fixes for alert emails
