--- a/statusbar/register.conf
+++ b/statusbar/register.conf
@@ -11,9 +11,12 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Status bar
 MODULE_CATEGORY: All
 
+CONFIG: AJAX_POLL|10|mod_statusbar_configpolldesc
+
 DEPENDS: jquerycore
 
 TABLE: tbl_statusbar_settings
+TABLE: tbl_statusbar_bridging
 
 MENU_CATEGORY: Admin
 PAGE: admin_site||Status bar
@@ -25,9 +28,19 @@ USES: word_message|The word message|Message
 USES: word_send|The word send|
 USES: word_success|The word success|Success
 USES: word_from|The word from |From
+USES: word_title|The word title|Title
+USES: word_minutes|The word  minutes|Minutes
+USES: word_description|The word description|Description
+USES: word_link|The word link|Link
 
+TEXT: mod_statusbar_nobuddies|No buddies online|No buddies online
+TEXT: mod_statusbar_configpolldesc|Config parameter description|Config variable to allow site administrators to change the default ajax polling interval time in seconds.
+TEXT: mod_statusbar_setpollinterval|Enter the new ajax polling interval in seconds|Enter the new ajax polling interval in seconds
+TEXT: mod_statusbar_alertperiod|Alert period|Alert period
 TEXT: mod_statusbar_instantmessage|Instant message|Instant message
 TEXT: mod_statusbar_selectrecipient|Select recipient...|Select recipient...
+TEXT: mod_statusbar_recipienterror|Please select a recipient|Please select a recipient
+TEXT: mod_statusbar_messageerror|Please enter a message|Please enter a message
 TEXT: mod_statusbar_sendmessage|Send message|Send message
 TEXT: mod_statusbar_confirmsend|Your message has been sent|Your message has been sent
 TEXT: mod_statusbar_settings|The word settings|Settings
@@ -52,13 +65,12 @@ TEXT: mod_statusbar_changeorientation|Change orientation|Change orientation
 TEXT: mod_statusbar_changeappearance|Change appearance|Change appearance
 TEXT: mod_statusbar_onlineusers|Online users|Online users
 TEXT: mod_statusbar_email|Email|Email
-TEXT: mod_statusbar_alarm|Calendar alarm|Calendar alarm
+TEXT: mod_statusbar_calendaralert|Calendar alert|Calendar alert
+TEXT: mod_statusbar_contentalert|Content alert|Content alert
 TEXT: mod_statusbar_document|New [-context-] content|New [-context-] content
 TEXT: mod_statusbar_picture|New pictures|New pictures
 TEXT: mod_statusbar_buddies|Buddies|Buddies
 TEXT: mod_statusbar_messaging|Messaging|Messaging
-TEXT: mod_statusbar_bookmarkpage|Bookmark page|Bookmark page
-TEXT: mod_statusbar_gotobookmarks|Go to bookmarks|Go to bookmarks
 
 COMMENT: Error text
 TEXT: mod_statusbar_invalidaction|Invalid action|Invalid action
