Fixed bug when ajax request goes through while dialog is open

--- a/statusbar/register.conf
+++ b/statusbar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Status bar
 MODULE_DESCRIPTION: This creates a floating bar to hold various icon links to features that should be available to the user at all times regardless of the page the user is viewing.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: May 17, 2012, 10:54 am
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: statusbar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Status bar
 MODULE_CATEGORY: All
 
+UPDATE_DESCRIPTION: [kdc] Fixed bug with dialogs open during ajax call
 CONFIG: AJAX_POLL|10|mod_statusbar_configpolldesc
 
 DEPENDS: jquerycore
@@ -71,6 +72,8 @@ TEXT: mod_statusbar_document|New [-context-] content|New [-context-] content
 TEXT: mod_statusbar_picture|New pictures|New pictures
 TEXT: mod_statusbar_buddies|Buddies|Buddies
 TEXT: mod_statusbar_messaging|Messaging|Messaging
+TEXT: mod_statusbar_bookmark|Bookmark this page|Bookmark this page
+TEXT: mod_statusbar_goto|Go to bookmarks|Go to bookmarks
 
 COMMENT: Error text
 TEXT: mod_statusbar_invalidaction|Invalid action|Invalid action
