Added ability to insert pagenotes into content pages

--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.633
+MODULE_VERSION: 1.634
 MENU_CATEGORY: content
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
@@ -14,7 +14,7 @@ DEPENDS: filemanager
 ISCONTEXTPLUGIN: 1
 TAGS: context|elearning
 
-UPDATE_DESCRIPTION" [kdc] Enabled activity streamer
+UPDATE_DESCRIPTION: [dwk] Added ability to have pagenotes as a context plugin such that it renders at the bottom of each context page.
 UPDATE_DESCRIPTION: [dwk] Added ability to have a 1, 2 or 3 column layout for [-CONTEXT-] content
 UPDATE_DESCRIPTION: Added styles to enable better skinning
 UPDATE_DESCRIPTION: Bug fixes for alert emails
