--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: bookmarks
 MODULE_DESCRIPTION: Manage bookmarking within the system
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 28, 2012, 12:34 pm
-MODULE_VERSION: 0.008
+MODULE_VERSION: 0.009
 MODULE_PATH: bookmarks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bookmarks
 MODULE_CATEGORY: bookmarks
 
+UPDATE_DESCRIPTION: [KDC] Fixed js not displaying link correctly
 UPDATE_DESCRIPTION: [KDC] Fixed js not displaying in statusbar
 UPDATE_DESCRIPTION: [KDC] Removed js include from show link
 UPDATE_DESCRIPTION: [KDC] Renamed class file to avoid conflict with internal mail - Added fixed width for dialogs for IE9 - fixed IE9 bug in JS
