Made podcast a context plugin

--- a/podcast/register.conf
+++ b/podcast/register.conf
@@ -3,14 +3,17 @@ MODULE_NAME: Podcast
 MODULE_DESCRIPTION: Podcasting allows users to deliver audio content via an RSS Feed which is then eister streamed, or downloaded. This modules provides the interface to uploading files, updating entries and automatically generating the RSS Feed.
 MODULE_AUTHORS: Tohir Solomons
 MODULE_RELEASEDATE: 2006-11-15
-MODULE_VERSION: 0.9
+MODULE_VERSION: 0.901
 MODULE_STATUS: Stable
 MENU_CATEGORY: User
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
-UPDATE_DESCRIPTION: Abstracted the word courses
 SIDEMENU: user-2
 SIDEMENU: elearnpostlogin-2
+ISCONTEXTPLUGIN: 1
+
+UPDATE_DESCRIPTION: [dwk] Made podcast a context plugin
+UPDATE_DESCRIPTION: Abstracted the word courses
 
 DEPENDS: filemanager
 DEPENDS: blocks
