Changed a text string

--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.635
+MODULE_VERSION: 1.636
 MENU_CATEGORY: content
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
@@ -14,6 +14,7 @@ DEPENDS: filemanager
 ISCONTEXTPLUGIN: 1
 TAGS: context|elearning
 
+UPDATE_DESCRIPTION: [dwk] Changed the New content needed to something less Klingon in nature
 UPDATE_DESCRIPTION: [dwk] Fixed undeclared variables
 UPDATE_DESCRIPTION: [dwk] Added ability to have pagenotes as a context plugin such that it renders at the bottom of each context page.
 UPDATE_DESCRIPTION: [dwk] Added ability to have a 1, 2 or 3 column layout for [-CONTEXT-] content
@@ -202,7 +203,7 @@ TEXT: mod_contextcontent_delchapterconfyes|Option to confirm deleting of chapter
 
 TEXT: word_chapter|The word Chapter|Chapter
 TEXT: mod_contextcontent_chapterhasnocontent|Notify user that chapter has no content|Chapter has no content
-TEXT: mod_contextcontent_chapternewcontent|Notify user that chapter needs content|New Content Needed.
+TEXT: mod_contextcontent_chapternewcontent|Notify user that chapter needs content|Please add pages to your fresh new chapter.
 TEXT: mod_contextcontent_chapterhasnocontentinstruction|Explain to user why chapter has no content and how it can be rectified|The chapter you have tried to view does not have any content, or had content which has now been deleted.
 TEXT: mod_contextcontent_chapternewcontentinstruction|Explain to user why chapter has no content and how it can be rectified|Pages to be added here.
 
