--- a/slate/register.conf
+++ b/slate/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Clean slate
 MODULE_DESCRIPTION: Provides a clean slate on which you can add block. There is a default slate, and any number of slate pages can be added to create flexible interfaces to a Chisimba installation.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 25, 2012, 3:29 pm
-MODULE_VERSION: 0.007
+MODULE_VERSION: 0.012
 MODULE_PATH: slate
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -16,6 +16,7 @@ TABLE: tbl_slate_pageblocks
 TABLE: tbl_slate_pages
 
 MENU_CATEGORY: admin
+MENU_CATEGORY: admin|manage|manageslates|mod_slate_manage
 PAGE: admin_site
 PAGE: admin_site|manage|manageslates|mod_slate_manage
 
@@ -29,3 +30,8 @@ TEXT: mod_slate_status_fail|Your slate failed to save|Your slate failed to save
 TEXT: mod_slate_about|Text for a left panel text block with some help information about slate|The 'Clean Slate' module provides an empty user interface to which an administrator can add content using blocks from this and other modules. An infinite number of clean slates can be added by using this interface, but in reality, it is probably not very useful to have more than around 10 slates. If you need more than that, you may well need a content tool, rather than clean slate. Click the pencil to edit an existing slate, the trashbin to delete one, and the add icon to add a new slate.
 TEXT: mod_slate_abouttitle|Title for about block|About clean slate
 TEXT: mod_slate_allslates|All slates|All slates
+TEXT: mod_slate_default|Default slate|DEFAULT
+TEXT: mod_slate_defaulttitle|Default slate|Default slate
+TEXT: mod_slate_defaultpage|Default page description|The default slate page, it cannot be deleted.
+TEXT: mod_slate_aboutedit|Edit a slate|Edit a slate
+TEXT: mod_slate_abouteditinst|Istructions for edit/add|You can add or edit a slate by filling in the form (right). Pages should be numbered sequentially, and it is not recommended to change this.
