--- a/slate/register.conf
+++ b/slate/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Clean slate
 MODULE_DESCRIPTION: Provides a clean slate on which you can add block. There is a default slate, and any number of slate pages can be added to create flexible interfaces to a Chisimba installation.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 25, 2012, 3:29 pm
-MODULE_VERSION: 0.012
+MODULE_VERSION: 0.013
 MODULE_PATH: slate
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -16,11 +16,13 @@ TABLE: tbl_slate_pageblocks
 TABLE: tbl_slate_pages
 
 MENU_CATEGORY: admin
-MENU_CATEGORY: admin|manage|manageslates|mod_slate_manage
+MENU_CATEGORY: admin
 PAGE: admin_site
 PAGE: admin_site|manage|manageslates|mod_slate_manage
 
 WIDEBLOCK: slatepages
+
+UPDATE_DESCRIPTION: Removed manage|manageslates|mod_slate_manage accidentally added as menu category
 
 TEXT: mod_slate_manage|Manage slates|Manage slates
 TEXT: mod_slate_heading_edit|Edit an existing slate|Edit an existing slate
