Added security so student cannot add tests or questions. Added styling for show test. Added student view for formative tests

--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -14,6 +14,7 @@ ISCONTEXTPLUGIN: 1
 MENU_CATEGORY: assessment
 PAGE: lecturer_assignment
 
+UPDATE_DESCRIPTION: [kdc] Added security so student cannot add tests or questions. Added styling for show test. Added student view for formative tests
 UPDATE_DESCRIPTION: [jsc] Added check for non-student, non admin users.
 UPDATE_DESCRIPTION: [jsc] Added check for non-student, non admin users.
 UPDATE_DESCRIPTION: [dwk] Added divs to make it more skinnable
