Removed call to broken LiveUser rules that do not work.

--- a/personalblocks/register.conf
+++ b/personalblocks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Personal blocks
 MODULE_DESCRIPTION: Allows the creation of personal blocks for display on sidebar block areas. Requires the blockalicious module to function. Personal blocks allow the addition of web widgets in locations such as a blog.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2008 06 14
-MODULE_VERSION: 0.381
+MODULE_VERSION: 0.382
 MODULE_PATH: personalblocks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -30,6 +30,7 @@ COMMENT: DEPENDS- blockalicious
 TAGS: blocks|widgets
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Removed call to broken LiveUser rules that do not work.
 UPDATE_DESCRIPTION: Miscellaneous improvements
 UPDATE_DESCRIPTION: Corrected some text
 UPDATE_DESCRIPTION: Enabled styling of middle blocks
