Fixed bug where year was hardcoded.

--- a/sasicontext/register.conf
+++ b/sasicontext/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: SASI - [-context-] Administration
 MODULE_DESCRIPTION: This module link a [-context-] in a chisimba site with the [-context-] in a SASI web service, let the user import or Synchronize user with the sasi webserver subject class list.
 MODULE_AUTHORS: Qhamani Fenama
 MODULE_RELEASEDATE: 2010 10 19
-MODULE_VERSION: 0.012
+MODULE_VERSION: 0.100
 MODULE_PATH: sasicontext
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -20,6 +20,7 @@ WIDEBLOCK: sasiwebserver|contextcontrolpanel
 CONFIG: ENABLE_SASIWS|FALSE|mod_sasicontext_enable
 CONFIG: WSDL|FALSE|mod_sasicontext_wsdl
 
+UPDATE_DESCRIPTION: Fixed bug where year was hardcoded
 UPDATE_DESCRIPTION: Added setting of pageSuppressGoogleAnalytics flag to suppress loading of GoogleAnalytics
 UPDATE_DESCRIPTION: Various changes
 UPDATE_DESCRIPTION: Made block_sasiwebserver only visible to admin users
