Fixed module icons

--- a/contextwizard/register.conf
+++ b/contextwizard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] wizard
 MODULE_DESCRIPTION: This is to provide a wizard type interface to direct users to the appropriate location within a [-organisation-] type site
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: April 15, 2012, 8:32 pm
-MODULE_VERSION: 0.007
+MODULE_VERSION: 0.009
 MODULE_PATH: contextwizard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: contextwizard
 MODULE_CATEGORY: [-organisations-]
 
+UPDATE_DESCRIPTION: [KDC] Fixed module icon
 UPDATE_DESCRIPTION: [KDC] Fixed language element
 UPDATE_DESCRIPTION: [KDC] Fixed bug when no gradesGroups exist
 UPDATE_DESCRIPTION: [KDC] Fixed bug when no grades exist
@@ -21,7 +22,7 @@ DEPENDS: jquerycore
 
 MENU_CATEGORY: Admin
 SIDEMENU: admin-2
-PAGE: admin_organise||Learning Components
+PAGE: admin_organise||contextwizard
 
 WIDEBLOCK: contextwizardmain
 
