Fixed module icons

--- a/grades/register.conf
+++ b/grades/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Learning components
 MODULE_DESCRIPTION: Module to hold learning components - can be used in conjunction with the [-organisations-] module
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 17, 2012, 5:59 pm
-MODULE_VERSION: 0.006
+MODULE_VERSION: 0.007
 MODULE_PATH: grades
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: grades
 MODULE_CATEGORY: [-organisations-]
 
+UPDATE_DESCRIPTION: [KDC] Fixed module icon
 UPDATE_DESCRIPTION: [KDC] Fixed bug with editing strands
 UPDATE_DESCRIPTION: [KDC] Fixed bug with no strands
 UPDATE_DESCRIPTION: [KDC] Removed debud statement
@@ -29,7 +30,7 @@ TABLE: tbl_grades_bridging
 
 MENU_CATEGORY: Admin
 SIDEMENU: admin-2
-PAGE: admin_organise||Learning Components
+PAGE: admin_organise||grades
 
 
 USE GROUPS: School Managers
