Fixed module icons

--- a/schools/register.conf
+++ b/schools/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-organisations-]
 MODULE_DESCRIPTION: Simple facility to store [-organisation-] basic data
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 10, 2012, 3:20 pm
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.006
 MODULE_PATH: schools
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schools
 MODULE_CATEGORY: [-organisations-]
 
+UPDATE_DESCRIPTION: [KDC] Fixed module icon
 UPDATE_DESCRIPTION: [KDC] Fixed potential bug WRT buttons and i18n
 UPDATE_DESCRIPTION: [KDC] Added dependency to jquerycore
 UPDATE_DESCRIPTION: [KDC] Fixed menu locations
@@ -23,7 +24,7 @@ TABLE: tbl_schools_schools
 TABLE: tbl_schools_contacts
 
 MENU_CATEGORY: Admin
-PAGE: admin_organise||[-organisations-]
+PAGE: admin_organise||schools
 SIDEMENU: admin-2
 
 USE_GROUPS: Principals
