Added show absolute date of post config setting.

--- a/blog/register.conf
+++ b/blog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Blog
 MODULE_DESCRIPTION: A personal weblog (Blog). A blog is a website where entries are made in journal style and displayed in a reverse chronological order. Blogs often provide commentary or news on a particular subject, such as food, politics, or local news; some function as more personal online diaries. A typical blog combines text, images, and links to other blogs, web pages, and other media related to its topic. Most blogs are primarily textual although some focus on photographs (photoblog), videos (vlog), or audio (podcasting), and are part of a wider network of social media. The term "blog" is a contraction of "Web log."
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 1.859
+MODULE_VERSION: 1.860
 MODULE_PATH: blog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MENU_CATEGORY: user
 
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: Added show absolute date of post config setting
 UPDATE_DESCRIPTION: Fixed bug where show all blogs option tried to call a non-existing object
 UPDATE_DESCRIPTION: Fixed the overkill on security improvement
 UPDATE_DESCRIPTION: Security improvement
@@ -72,6 +73,7 @@ CONFIG: retweet_via|0|mod_blog_retweet_via
 CONFIG: blog_postcount|NA|mod_blog_confpostcount
 CONFIG: blog_blockposttag|NA|mod_blog_confposttag
 CONFIG: allowthemes|FALSE|mod_blog_allowthemes
+CONFIG: showabsolutedate|FALSE|mod_blog_showabsolutedate
 
 USE_GROUPS: Bloggers
 
@@ -402,3 +404,4 @@ TEXT: mod_blog_terms_title|Terms and Conditions|Terms and Conditions
 TEXT: mod_blog_terms_accept|I accept these terms and conditions.|I accept these terms and conditions.
 TEXT: mod_blog_block_intheblogbytag|blog posts by tag|Latest blogs by tag
 TEXT: mod_blog_moderate_comments|Moderate Comments|Moderate Comments
+TEXT: mod_blog_showabsolutedate|Show absolute date of post|Show absolute date of post
