Removed first draft of gallery New module imagegallery

--- a/statusbar/register.conf
+++ b/statusbar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Status bar
 MODULE_DESCRIPTION: This creates a floating bar to hold various icon links to features that should be available to the user at all times regardless of the page the user is viewing.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: May 17, 2012, 10:54 am
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.004
 MODULE_PATH: statusbar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Status bar
 MODULE_CATEGORY: All
 
+UPDATE_DESCRIPTION: [kdc] Fixed module icon
 UPDATE_DESCRIPTION: [kdc] Fixed issues relating to the bookmarks on the statusbar
 UPDATE_DESCRIPTION: [kdc] Fixed bug with dialogs open during ajax call
 CONFIG: AJAX_POLL|10|mod_statusbar_configpolldesc
@@ -21,7 +22,7 @@ TABLE: tbl_statusbar_settings
 TABLE: tbl_statusbar_bridging
 
 MENU_CATEGORY: Admin
-PAGE: admin_site||Status bar
+PAGE: admin_site||statusbar
 
 USES; word_save|The word save|Save
 USES: word_cancel|The word cancel|Cancel
