Added random image block fixed usability issues and bugs

--- a/imagegallery/register.conf
+++ b/imagegallery/register.conf
@@ -3,13 +3,15 @@ MODULE_NAME: Image Gallery
 MODULE_DESCRIPTION: This a place where you can upload your images and share them with your friends
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: June 19, 2012, 8:18 pm
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: imagegallery
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: imagegallery
 MODULE_CATEGORY: imagegallery
+
+UPDATE_DESCRIPTION: [kdc] fixed bug and enhanced usability
 
 BLOCK: imagegallery
 
@@ -50,6 +52,7 @@ USES: word_next|The word next|Next
 USES: word_first|The word first|First
 USES: word_last|The word last|Last
 USES: word_views|The word views|Views
+USES: word_menu|The word menu|Menu
 
 TEXT: mod_imagegallery_sharedgalleries|Shared galleries|Shared galleries
 TEXT: mod_imagegallery_sharedalbums|Shared albums|Shared albums
@@ -65,6 +68,7 @@ TEXT: mod_imagegallery_personalimages|Personal images|Personal images
 TEXT: mod_imagegallery_contextimages|[-context-] images|[-context-] images
 TEXT: mod_imagegallery_nonegivenedit|None given. Please edit|None given. Please edit
 TEXT: mod_imagegallery_nonegiven|None given|None given
+TEXT: mod_imagegallery_postedon|Posted on|Posted on
 
 TEXT: mod_imagegallery_mygalleries|My galleries|My galleries
 TEXT: mod_imagegallery_myalbums|My albums|My albums
