Debugging missing categories

--- a/news/register.conf
+++ b/news/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: News
 MODULE_DESCRIPTION: This is an online news management and publishing system. It allows admins to setup categories, each category can have one of multiple views. It also integrates with Google Maps and a timeline view of news.
 MODULE_AUTHORS: Tohir Solomons, Paul Scott, David Wafula, Paul Mungai
 MODULE_RELEASEDATE: 2007 12 14
-MODULE_VERSION: 2.365
+MODULE_VERSION: 2.366
 MODULE_PATH: news
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,6 +19,7 @@ PAGE: admin_site
 
 MODULE_CATEGORY: news
 
+UPDATE_DESCRIPTION: [dwk] Debugging missing categories
 UPDATE_DESCRIPTION: [pwando] Added content blocks
 UPDATE_DESCRIPTION: Removed hard coded styles and hard breaks
 UPDATE_DESCRIPTION: Fixed geolocation not working in edit/add mode for news story
