--- a/userimport/register.conf
+++ b/userimport/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: User Import
 MODULE_DESCRIPTION: This module implements batch import of new users, using either CSV or XML files, or by webservice to a remote database
 MODULE_AUTHORS: James Scoble
 MODULE_RELEASEDATE: 2005 02 18
-MODULE_VERSION: 1.988
+MODULE_VERSION: 1.989
 MODULE_PATH: userimport
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MODULE_LANGTERMS: "UserImport"
 TAGS: administration|user
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [JSc] Added workaround for inconsistent UWC data
 UPDATE_DESCRIPTION: Bug fixed - userimport now able to remove users from courses again
 UPDATE_DESCRIPTION: Fixed configuration language items.
 
@@ -25,12 +26,14 @@ CONFIG: remotedata2|0|mod_userimport_remoteservice
 CONFIG: emaildomain|0|mod_userimport_emaildomain
 CONFIG: sendemail|1|mod_userimport_sendemail
 CONFIG: set_to_ascii|0|mod_userimport_settoascii
+CONFIG: uwc_data|0|mod_userimport_uwcdata
 
 TEXT: mod_userimport_remoteserver|URL for remote web service.|URL for remote web service.
 TEXT: mod_userimport_remoteservice|Second (optional) part of URL for remote web service.|Second (optional) part of URL for remote web service.
 TEXT: mod_userimport_emaildomain|Domain name for email.|Domain name for email.
 TEXT: mod_userimport_sendemail|Send registration email to users?|Send registration email to users?
 TEXT: mod_userimport_settoascii|Send email in ASCII format?|Send email in ASCII format?
+TEXT: mod_userimport_uwcdata|UWC Data|Ignore Name and Surname when checking for existing users
 
 PAGE: admin_users
 PAGE: lecturer_users
