Added text abstractions

--- a/wall/register.conf
+++ b/wall/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Wall
 MODULE_DESCRIPTION: A simple wall module that makes use of OEMBED and that tries to look a bit like Facebook's wall
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.068
+MODULE_VERSION: 0.069
 MODULE_PATH: wall
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -28,6 +28,7 @@ WIDEBLOCK: genericwall
 TABLE: tbl_wall_posts
 TABLE: tbl_wall_comments
 
+UPDATE_DESCRIPTION: [dwk] Added text abstractions
 UPDATE_DESCRIPTION: [dwk] Tested and marked it stable
 UPDATE_DESCRIPTION: [dwk] Fixed a few bugs and added divs for styling
 UPDATE_DESCRIPTION: [dwk] Fixed button not returning from disabled state
@@ -73,6 +74,7 @@ TEXT: mod_wall_nowalltype|Error message when wall type is missing|No wall type g
 TEXT: mod_wall_olderposts|Link to view older posts|Older posts
 TEXT: mod_wall_nothingappendto|An internal error that should never be reached|There is nothing to append to. Reload the page and try again.
 TEXT: mod_wall_wallpost|Wall post|Wall post
+TEXT: mod_wall_contextwall|Context wall|[-context-] wall
 
 
 COMMENT: Text for the activity streamer
