Used language2txt for word context

--- a/personalblocks/register.conf
+++ b/personalblocks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Personal blocks
 MODULE_DESCRIPTION: Allows the creation of personal blocks for display on sidebar block areas. Requires the blockalicious module to function. Personal blocks allow the addition of web widgets in locations such as a blog.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2008 06 14
-MODULE_VERSION: 0.384
+MODULE_VERSION: 0.385
 MODULE_PATH: personalblocks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -30,6 +30,7 @@ COMMENT: DEPENDS- blockalicious
 TAGS: blocks|widgets
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Used language2txt for word context
 UPDATE_DESCRIPTION: [DWK] Rendered context blocks in featureboxes
 UPDATE_DESCRIPTION: [DWK] Removed call to broken LiveUser rules that do not work.
 UPDATE_DESCRIPTION: Miscellaneous improvements
@@ -69,6 +70,10 @@ TEXT: mod_personalblocks_view|View middle blocks|View middle blocks
 TEXT: mod_personalblocks_noleft|Message for when there are no left blocks|You do not have any saved left panel blocks. You can add a left panel block by selecting the edit tab in the personal blocks module.
 TEXT: mod_personalblocks_noright|Message for when there are no right blocks|You do not have any saved right panel blocks. You can add a right panel block by selecting the edit tab in the personal blocks module.
 TEXT: mod_personalblocks_nomiddle|Message for when there are no middle blocks|You do not have any saved middle panel blocks. You can add a left panel block by selecting the edit tab in the personal blocks module.
+
+TEXT: mod_personalblocks_contextmiddle|Context middle block|[-CONTEXT-] blocks: middle
+TEXT: mod_personalblocks_contextleft|Context left block|[-CONTEXT-] blocks: left
+TEXT: mod_personalblocks_contextright|Context right block|[-CONTEXT-] blocks: right
 
 TEXT: mod_personalblocks_blocktype|Block type|Type
 TEXT: mod_personalblocks_personal|Personal|Personal block
