FIxed file preview not working

--- a/personalblocks/register.conf
+++ b/personalblocks/register.conf
@@ -30,6 +30,7 @@ COMMENT: DEPENDS- blockalicious
 TAGS: blocks|widgets
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Fixed filepreview not working
 UPDATE_DESCRIPTION: [DWK] Used language2txt for word context
 UPDATE_DESCRIPTION: [DWK] Rendered context blocks in featureboxes
 UPDATE_DESCRIPTION: [DWK] Removed call to broken LiveUser rules that do not work.
