Changed name to kBookmarks

--- a/kbookmark/register.conf
+++ b/kbookmark/register.conf
@@ -1,21 +1,21 @@
 MODULE_ID: kbookmark
-MODULE_NAME: Bookmarks
-MODULE_DESCRIPTION: 	Bookmark allows you to store and catogorise bookmarks,
-			and for xbel bookmark export and import from different browsers.
+MODULE_NAME: kBookmarks
+MODULE_DESCRIPTION: Bookmark allows you to store and catogorise bookmarks, and for xbel bookmark export and import from different browsers.
 MODULE_AUTHORS: James K. Njenga, Qhamani Fenama
 MODULE_RELEASEDATE: 2005 02 18
-MODULE_VERSION: 1.02
+MODULE_VERSION: 1.03
 MODULE_PATH: kbookmark
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
-MODULE_LANGTERMS: Bookmark
-MODULE_STATUS: pre-alpha
+MODULE_LANGTERMS: kbookmark
+MODULE_STATUS: alpha
 MENU_CATEGORY: user
 SIDEMENU: user-2
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
 
+UPDATE_DESCRIPTION: (dwk) Change module name to kBookmarks, as we have two modules named bookmarks
 UPDATE_DESCRIPTION: upgraded the kbookmark module with ExtJS
 
 TABLE: tbl_bookmarks
