Changed punction to spaces in file names used for captions

--- a/imagegallery/register.conf
+++ b/imagegallery/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Image Gallery
 MODULE_DESCRIPTION: This a place where you can upload your images and share them with your friends
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: June 19, 2012, 8:18 pm
-MODULE_VERSION: 0.002
+MODULE_VERSION: 0.003
 MODULE_PATH: imagegallery
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: imagegallery
 MODULE_CATEGORY: imagegallery
 
+UPDATE_DESCRIPTION: [dwk] Removed underscores and other punctuation from long file names
 UPDATE_DESCRIPTION: [kdc] fixed bug and enhanced usability
 
 BLOCK: imagegallery
