Added dependency on buddies, added module status

--- a/bookmarks/register.conf
+++ b/bookmarks/register.conf
@@ -3,14 +3,16 @@ MODULE_NAME: bookmarks
 MODULE_DESCRIPTION: Manage bookmarking within the system
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 28, 2012, 12:34 pm
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: bookmarks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: bookmarks
 MODULE_CATEGORY: bookmarks
+MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [dwk] Added dependency on buddies, added module status
 UPDATE_DESCRIPTION: [KDC] Fixed js not displaying link correctly
 UPDATE_DESCRIPTION: [KDC] Fixed js not displaying in statusbar
 UPDATE_DESCRIPTION: [KDC] Removed js include from show link
@@ -22,6 +24,7 @@ UPDATE_DESCRIPTION: [KDC] Added icon to go to bookmarks
 UPDATE_DESCRIPTION: [KDC] Added contextcode
 
 DEPENDS: jquerycore
+DEPENDS: buddies
 
 TABLE: tbl_bookmarks_bookmarks
 TABLE: tbl_bookmarks_folders
