added dependency on activitystreamer

--- a/statusbar/register.conf
+++ b/statusbar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Status bar
 MODULE_DESCRIPTION: This creates a floating bar to hold various icon links to features that should be available to the user at all times regardless of the page the user is viewing.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: May 17, 2012, 10:54 am
-MODULE_VERSION: 0.006
+MODULE_VERSION: 0.008
 MODULE_PATH: statusbar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,7 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: Status bar
 MODULE_CATEGORY: All
 
-UPDATE_DESCRIPTION: [dwk] Fixed dependency on bookmarks, added dependency on bookmarks
+UPDATE_DESCRIPTION: [dwk] Fixed dependency on bookmarks, added dependency on activitystreamer
 UPDATE_DESCRIPTION: [kdc] Fixed module icon
 UPDATE_DESCRIPTION: [kdc] Fixed issues relating to the bookmarks on the statusbar
 UPDATE_DESCRIPTION: [kdc] Fixed bug with dialogs open during ajax call
@@ -19,6 +19,7 @@ CONFIG: AJAX_POLL|10|mod_statusbar_configpolldesc
 
 DEPENDS: jquerycore
 DEPENDS: bookmarks
+DEPENDS: activitystreamer
 
 TABLE: tbl_statusbar_settings
 TABLE: tbl_statusbar_bridging
