Changed behaviour to load context wiki if in context

--- a/wiki/register.conf
+++ b/wiki/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Wiki
 MODULE_DESCRIPTION: A wiki is a website that allows visitors to add, remove, and edit content. This ease of interaction and operation makes a wiki an effective tool for mass collaborative authoring.  A wiki enables documents to be written collaboratively, in a simple markup language using a web browser. A single page in a wiki is referred to as a "wiki page", while the entire body of pages, which are usually highly interconnected via hyperlinks, is "the wiki". A wiki is essentially a database for creating, browsing and searching information.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: 2007 06 01
-MODULE_VERSION: 1.707
+MODULE_VERSION: 1.708
 MODULE_PATH: wiki
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
@@ -13,6 +13,7 @@ MODULE_STATUS: stable
 BLOCK: wiki
 DEPENDS: markitup
 
+UPDATE_DESCRIPTION: [dwk] Changed behaviour to load context wiki if in context
 UPDATE_DESCRIPTION: [dwk] Added some divs to facilitate skinning
 UPDATE_DESCRIPTION: Factored markitup out of HTML elements.
 UPDATE_DESCRIPTION: Added max-width CSS property to drop-down.
