Fixed missing language items

--- a/activitystreamer/register.conf
+++ b/activitystreamer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Activity Streamer
 MODULE_DESCRIPTION: Provides a log of activities performed by users on the site. Supports PubSubHubbub and activitystrea.ms
 MODULE_AUTHORS: Wesley Nitsckie, Paul Mungai
 MODULE_RELEASEDATE: 2008 08 25
-MODULE_VERSION: 0.041
+MODULE_VERSION: 0.043
 MODULE_PATH: activitystreamer
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,6 +18,7 @@ DEPENDS_CONTEXT: 0
 DEPENDS: feed
 DEPENDS: pubsubhubbub
 
+UPDATE_DESCRIPTION: [dwk] Fixed infernal missing language item
 UPDATE_DESCRIPTION: [kdc] Fixed error on passthroughlogin
 UPDATE_DESCRIPTION: Changed module status to beta
 UPDATE_DESCRIPTION: Now using ext instead of htmlelements for the extjs resources
@@ -43,3 +44,6 @@ TEXT: mod_activitystreamer_courseupdates|Course Updates|Course Updates
 TEXT: mod_activitystreamer_siteupdates|Site Updates|Site Updates
 TEXT: mod_activitystreamer_conf_twitteruser|Twitter User|Twitter User
 TEXT: mod_activitystreamer_conf_twitterpassword|Twitter Password|Twitter Password
+
+TEXT: mod_activitystreamer_latestactivityall|All [-CONTEXT-] activities|All [-CONTEXT-] activities
+TEXT: mod_activitystreamer_courseupdatesbtn|[-CONTEXT-] updates|[-CONTEXT-] updates button
